--- a/.github/workflows/auto_trigger_teamcity.yml
+++ b/.github/workflows/auto_trigger_teamcity.yml
@@ -40,7 +40,7 @@ jobs:
 
     steps:
       - name: Paths Filter
-        uses: ./.github/actions/paths-filter
+        uses: dorny/paths-filter@4512585405083f25c027a35db413c2b3b9006d50
         id: filter
         with:
           filters: |
