--- a/.github/workflows/auto_trigger_teamcity.yml
+++ b/.github/workflows/auto_trigger_teamcity.yml
@@ -115,11 +115,9 @@ jobs:
           echo "encoded_string : ${encoded_string}"
           echo "latest_commit_id : ${{ env.LATEST_COMMIT }}"
 
-          echo "123"
           if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "buildall" && ! "${comment_message}" =~ "Thanks for your contribution" ]]; then
             trigger_pipelines="Doris_Doris_FeUt Doris_DorisBeUt_BeUt Doris_DorisCompile_Compile Doris_Performance_Clickbench_ClickbenchNew Doris_ArmPipeline_P0Regression ${trigger_pipelines}"
           fi
-          echo "111"
           if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "p0" && ! "${comment_message}" =~ "Thanks for your contribution" && ${{ steps.filter.outputs.regression_about_changes == 'true' }} ]]; then
             trigger_pipelines="Doris_DorisRegression_P0Regression  ${trigger_pipelines}"
           fi
@@ -135,10 +133,10 @@ jobs:
           if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "beut" && ! "${comment_message}" =~ "Thanks for your contribution" && ${{ steps.filter.outputs.be_ut_about_changes == 'true' }} ]]; then
             trigger_pipelines="Doris_DorisBeUt_BeUt  ${trigger_pipelines}"
           fi
-          if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "compile" && ! "${comment_message}" =~ "Thanks for your contribution" ${{ steps.filter.outputs.regression_about_changes == 'true' }} ]]; then
+          if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "compile" && ! "${comment_message}" =~ "Thanks for your contribution" && ${{ steps.filter.outputs.regression_about_changes == 'true' }} ]]; then
             trigger_pipelines="Doris_DorisCompile_Compile  ${trigger_pipelines}"
           fi
-          if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "clickbench" && ! "${comment_message}" =~ "Thanks for your contribution" ${{ steps.filter.outputs.clickbench_about_changes == 'true' }} ]]; then
+          if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "clickbench" && ! "${comment_message}" =~ "Thanks for your contribution" && ${{ steps.filter.outputs.clickbench_about_changes == 'true' }} ]]; then
             trigger_pipelines="Doris_Performance_Clickbench_ClickbenchNew  ${trigger_pipelines}"
           fi
           if [[ "${comment_message}" =~ "run" && "${comment_message}" =~ "arm" && ! "${comment_message}" =~ "Thanks for your contribution" && ${{ steps.filter.outputs.regression_about_changes == 'true' }} ]]; then
