--- a/.github/workflows/add-label.yml
+++ b/.github/workflows/add-label.yml
@@ -58,7 +58,7 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          github.issues.addLabels({ 
+          github.rest.issues.addLabels({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.payload.pull_request.number,
