--- a/.github/workflows/add-label.yml
+++ b/.github/workflows/add-label.yml
@@ -64,3 +64,15 @@ jobs:
             issue_number: context.payload.pull_request.number,
             labels: ['meta-change'] 
           });
+
+    - name: "Remove meta-change label to PR"
+      if: ${{ steps.filter.outputs.meta_changes != 'true' }}
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.rest.issues.removeLabel({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            labels: ['meta-change'] 
+          });
