--- a/.github/workflows/add-label.yml
+++ b/.github/workflows/add-label.yml
@@ -49,7 +49,9 @@ jobs:
         filters: |
           meta_changes:
             - 'fe/fe-common/src/main/java/org/apache/doris/common/FeMetaVersion.java'
-            - 'fe/fe-core/src/main/java/org/apache/doris/alter/AlterOpType.java'
+            - 'fe/fe-core/src/main/java/org/apache/doris/persist/OperationType.java'
+            - 'fe/fe-core/src/main/java/org/apache/doris/persist/meta/PersistMetaModules.java'
+            - 'fe/fe-core/src/main/java/org/apache/doris/persist/EditLog.java'
             - 'gensrc/thrift/*'
             - 'gensrc/proto/*'
 
@@ -58,7 +60,19 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          github.issues.addLabels({ 
+          github.rest.issues.addLabels({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            labels: ['meta-change'] 
+          });
+
+    - name: "Remove meta-change label to PR"
+      if: ${{ steps.filter.outputs.meta_changes != 'true' }}
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.rest.issues.removeLabel({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.payload.pull_request.number,
