--- a/.github/workflows/add-label.yml
+++ b/.github/workflows/add-label.yml
@@ -67,7 +67,10 @@ jobs:
 
     - name: "Remove meta-change label to PR"
       if: ${{ steps.filter.outputs.meta_changes != 'true' }}
-      uses: actions/github-script@v5
+      permissions:
+        issues: write
+        pull-requests: write
+      uses: actions/github-script@v6
       with:
         script: |
           github.rest.issues.removeLabel({
