--- a/.github/workflows/add-label.yml
+++ b/.github/workflows/add-label.yml
@@ -77,5 +77,5 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.payload.pull_request.number,
-            labels: ['meta-change'] 
+            name: ["meta-change"]
           });
