--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -48,13 +48,13 @@ jobs:
     - name: 获取关联的 PR
       id: extract
       run: |
-        echo "PULL_REQUEST_NUM is: ${PULL_REQUEST_NUM}"
-        echo "LATEST_COMMIT is: ${LATEST_COMMIT}"
+        echo "PULL_REQUEST_NUM is: ${{ env.PULL_REQUEST_NUM }}"
+        echo "LATEST_COMMIT is: ${{ env.LATEST_COMMIT }}"
 
     - name: "Checkout ${{ steps.extract.outputs.pr_number }}"
       uses: actions/checkout@v3
       with:
-        ref: pull/${PULL_REQUEST_NUM}/head
+        ref: pull/${{ env.PULL_REQUEST_NUM }}/head
         submodules: recursive
 
     - name: Paths filter
