--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -50,11 +50,13 @@ jobs:
       run: |
         echo "PULL_REQUEST_NUM is: ${{ env.PULL_REQUEST_NUM }}"
         echo "LATEST_COMMIT is: ${{ env.LATEST_COMMIT }}"
+        echo "PULL_REQUEST_NUM=${PULL_REQUEST_NUM}" >> "$GITHUB_OUTPUT"
+        echo "LATEST_COMMIT=${LATEST_COMMIT}" >> "$GITHUB_OUTPUT"
 
-    - name: "Checkout PR ${{ env.PULL_REQUEST_NUM }} ${{ env.LATEST_COMMIT }}"
+    - name: "Checkout PR ${{ steps.extract.outputs.PULL_REQUEST_NUM }} ${{ steps.extract.outputs.LATEST_COMMIT }}"
       uses: actions/checkout@v4
       with:
-        ref: ${{ env.LATEST_COMMIT }}
+        ref: ${{ steps.extract.outputs.LATEST_COMMIT }}
         submodules: recursive
 
     - name: Paths filter
