--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -52,32 +52,19 @@ jobs:
         echo "PULL_REQUEST_NUM=${{ env.PULL_REQUEST_NUM }}" >> "$GITHUB_OUTPUT"
         echo "LATEST_COMMIT=${{ env.LATEST_COMMIT }}" >> "$GITHUB_OUTPUT"
 
-    - name: "Checkout PR ${{ steps.extract.outputs.PULL_REQUEST_NUM }}, ${{ steps.extract.outputs.LATEST_COMMIT }}"
+    - name: "Checkout PR ${{ steps.extract.outputs.PULL_REQUEST_NUM }}, commit ${{ steps.extract.outputs.LATEST_COMMIT }}"
       uses: actions/checkout@v4
       with:
         ref: ${{ steps.extract.outputs.LATEST_COMMIT }}
-        submodules: recursive
-
-    # - name: Get changed files
-    #   id: changes
-    #   uses: tj-actions/changed-files@v40
-    #   with:
-    #     base_sha: ${{ github.event.pull_request.base.sha }}
-    
-    - name: Get Changed Files
-      id: pr_changed_files
-      uses: actions/changed-files@v1
-      with:
-        format: 'json'
-        from: ${{ steps.extract.outputs.PULL_REQUEST_NUM }}
-    
-    - name: Filter Changed Files
+    - name: "Check if pr need run build"
       id: changes
-      uses: actions/paths-filter@v2
-      with:
-        filters: |
-          fe_ut:
-            - 'fe/*'
+      run: |
+        cd regression-test/pipeline/common/
+        if bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "fe-ut"; then
+          echo "fe_ut=true" >> "$GITHUB_OUTPUT"
+        elif bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "be-ut"; then
+          echo "be_ut=true" >> "$GITHUB_OUTPUT"
+        fi
 
     - name: Trigger fe ut
       if: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE == 'feut' && steps.changes.outputs.fe_ut == 'true' }}
