--- a/.github/workflows/comment-to-trigger-teamcity.yml
+++ b/.github/workflows/comment-to-trigger-teamcity.yml
@@ -62,26 +62,27 @@ jobs:
       run: |
         cd regression-test/pipeline/common/
         if bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "fe-ut"; then
-          echo "fe_ut=true" >> "$GITHUB_OUTPUT"
+          echo "fe_ut=true" | tee -a "$GITHUB_OUTPUT"
         elif bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "be-ut"; then
-          echo "be_ut=true" >> "$GITHUB_OUTPUT"
+          echo "be_ut=true" | tee -a "$GITHUB_OUTPUT"
         elif bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "ckb"; then
-          echo "ckb=true" >> "$GITHUB_OUTPUT"
-          echo "tpch=true" >> "$GITHUB_OUTPUT"
+          echo "ckb=true" | tee -a "$GITHUB_OUTPUT"
+          echo "tpch=true" | tee -a "$GITHUB_OUTPUT"
         elif bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "regression-p0"; then
-          echo "p0=true" >> "$GITHUB_OUTPUT"
-          echo "external=true" >> "$GITHUB_OUTPUT"
-          echo "pipelinex_p0"=true" >> "$GITHUB_OUTPUT"
-          echo "arm"=true" >> "$GITHUB_OUTPUT"
+          echo "p0=true" | tee -a "$GITHUB_OUTPUT"
+          echo "external=true" | tee -a "$GITHUB_OUTPUT"
+          echo "pipelinex_p0"=true" | tee -a "$GITHUB_OUTPUT"
+          echo "arm"=true" | tee -a "$GITHUB_OUTPUT"
         elif bash check-pr-if-need-run-build.sh "${{ steps.extract.outputs.PULL_REQUEST_NUM }}" "regression-p1"; then
-          echo "p1=true" >> "$GITHUB_OUTPUT"
+          echo "p1=true" | tee -a "$GITHUB_OUTPUT"
         fi
+
+        echo "-- COMMENT_TRIGGER_TYPE: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE }}"
+        echo "-- COMMENT_REPEAT_TIMES: ${{ steps.pr_comment.outputs.COMMENT_REPEAT_TIMES }}"
 
     - name: Trigger fe ut
       if: ${{ contains(fromJSON('["feut", "buildall"]'), steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.fe_ut == 'true' }}
       run: |
-        echo "-- COMMENT_TRIGGER_TYPE: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE }}"
-        echo "-- COMMENT_REPEAT_TIMES: ${{ steps.pr_comment.outputs.COMMENT_REPEAT_TIMES }}"
         echo "fe-ut related files changed."
         echo "trigger fe ut with teamcity api"
         set -x
@@ -97,8 +98,6 @@ jobs:
     - name: Skip fe ut
       if: ${{ contains(fromJSON('["feut", "buildall"]'), steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.fe_ut == 'false' }}
       run: |
-        echo "-- COMMENT_TRIGGER_TYPE: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE }}"
-        echo "-- COMMENT_REPEAT_TIMES: ${{ steps.pr_comment.outputs.COMMENT_REPEAT_TIMES }}"
         echo "fe-ut related files not changed."
         echo "skip fe ut with teamcity api, just set to success"
         set -x
@@ -108,8 +107,6 @@ jobs:
     - name: Trigger be ut
       if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.be_ut == 'true' }}
       run: |
-        echo "-- COMMENT_TRIGGER_TYPE: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE }}"
-        echo "-- COMMENT_REPEAT_TIMES: ${{ steps.pr_comment.outputs.COMMENT_REPEAT_TIMES }}"
         echo "be-ut related files changed."
         echo "trigger be ut with teamcity api"
         set -x
@@ -124,8 +121,6 @@ jobs:
     - name: Skip be ut
       if: ${{ contains(fromJSON('["beut", "buildall"]'), steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE) && steps.changes.outputs.be_ut == 'false' }}
       run: |
-        echo "-- COMMENT_TRIGGER_TYPE: ${{ steps.pr_comment.outputs.COMMENT_TRIGGER_TYPE }}"
-        echo "-- COMMENT_REPEAT_TIMES: ${{ steps.pr_comment.outputs.COMMENT_REPEAT_TIMES }}"
         echo "be-ut related files not changed."
         echo "skip be ut with teamcity api, just set to success"
         set -x
